--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -55,13 +55,10 @@
               </div>
 
               <% if(project.task[i].state==="inprogress") { %>
-                <div id="<%=project.task[i]._id%>" style="text-align:left;" class="panel-collapse collapse in">
-                  <form action='/project/done/<%=project._id%>/<%=project.task[i]._id%>' method='get'> <button type="submit" value="Confirm!"> </button> </form>
+                <div id="<%=project.task[i]._id%>" style="text-align:left;" class="panel-collapse collapse in"> <form action='/project/done/<%=project._id%>/<%=project.task[i]._id%>' method='get'> <button type="submit" > Confirm </button> </form>
               <% } else { %>
-
                 <div id="<%=project.task[i]._id%>" style="text-align:left;" class="panel-collapse collapse">
-                        <% } %>
-
+              <% } %>
 
                 <div class="panel-body">
                   <form ref='upload' id='upload' action='/upload/<%=project._id%>' method='post' encType="multipart/form-data">
