--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -55,8 +55,9 @@
               </div>
 
               <% if(project.task[i].state==="inprogress") { %>
-                <div id="<%=project.task[i]._id%>" style="text-align:left;" class="panel-collapse collapse in"> <form action='/project/done/<%=project._id%>/<%=project.task[i]._id%>' method='get'> <button type="submit" > Confirm </button> </form>
-              <% } else { %>
+                <div id="<%=project.task[i]._id%>" style="text-align:left;" class="panel-collapse collapse in">  <a href="/project/done/<%=project._id%>/<%=project.task[i]._id%>" Confirm! </a>
+
+                <% } else { %>
                 <div id="<%=project.task[i]._id%>" style="text-align:left;" class="panel-collapse collapse">
               <% } %>
 
