--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -80,11 +80,12 @@
                       <% } %>
                     </ul>
                     <% } %>
-
+                  <% if(name === 'Admin' | name === project.pm ) { %>
                     <br><br> <hr>
                     산출물 업로드: <input type="file" name="<%=project.task[i]._id %>" >
                     <input type='submit' value='Upload!' />
                     <!--span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span-->
+                  <% } %>
                   </form>
                 </div>
                 </div>
