/project/project/project..

--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -27,7 +27,7 @@
   			  type:"delete",
   			  dataType:"json",
   			  success: function(result){
-            location.href="../project/dashboard";
+            location.href="../dashboard";
   			  },
   			  error:function(request,status,error){
   		       console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
