--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/common/css/style.css">
 
     <script>
+    /*
     function removeProj(id){
       var result = confirm("정말 삭제하시겠습니까?");
       if(result)
@@ -34,6 +35,26 @@
   		       console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
   			  }
   		  });
+      }
+    }
+    */
+
+    function removeProj(id){
+      var result = confirm("정말 삭제하시겠습니까?");
+      if(result)
+      {
+        $.ajax({
+          url:"../delete/"+id,
+          type:"get",
+          dataType:"json",
+          success: function(result){
+            console.log("project deleted");
+            location.href="../dashboard";
+          },
+          error:function(request,status,error){
+             console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+          }
+        });
       }
     }
 
