--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -44,7 +44,7 @@
       if(result)
       {
         $.ajax({
-          url:"../delete/"+id,
+          url:"/project/delete/"+id,
           type:"get",
           dataType:"json",
           success: function(result){
