--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/common/css/style.css">
 
     <script>
-    /*
+
     function removeProj(id){
       var result = confirm("정말 삭제하시겠습니까?");
       if(result)
@@ -37,26 +37,15 @@
   		  });
       }
     }
-    */
 
-    function removeProj(id){
-      var result = confirm("정말 삭제하시겠습니까?");
-      if(result)
-      {
-        $.ajax({
-          url:"/project/delete/"+id,
-          type:"get",
-          dataType:"json",
-          success: function(result){
-            console.log("project deleted");
-            location.href="../dashboard";
-          },
-          error:function(request,status,error){
-             console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
-          }
-        });
-      }
-    }
+    //
+    // function removeProj(id){
+    //   var result = confirm("정말 삭제하시겠습니까?");
+    //   if(result)
+    //   {
+    //     //
+    //   }
+    // }
 
 
      function addTask(pid, tname) {
