--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -25,11 +25,11 @@
       {
         $.ajax({
   			  url:"/project/delete/"+id,
-  			  type:"delete",
+  			  type:"get",
   			  dataType:"json",
   			  success: function(result){
-            //console.log("project deleted");
-            //location.href="../dashboard";
+            console.log("project deleted");
+            location.href="../dashboard";
   			  },
   			  error:function(request,status,error){
   		       console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
