dlwp ekdnsfhem aksemfdjdiwl

--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -108,8 +108,9 @@
                    설명: <input type="text" name="pdesc" value="<%= project.pdesc %>" class="form-projectdesc form-control" id="pdesc">
               </div>
 
-              <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button> <button type='button' id="<%=project._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
+              <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button>
             </form>
+            <button type='button' id="<%=project._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
 
 
                 <div class="input-group">
