--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -110,7 +110,8 @@
 
               <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button>
             </form>
-            <button type='button' id="<%=project._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
+            <a href="/project/delete/<%=project._id%>" onclick="return confirm('정말 삭제하시겠습니까?');"> 프로젝트 삭제 </a>
+            <!-- <button type='button' id="<%=project._id %>" class="btn" style="display:inline;" onclick="/"> 프로젝트 삭제 </button> -->
 
 
                 <div class="input-group">
