--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -19,35 +19,6 @@
 
     <script>
 
-    function removeProj(id){
-      var result = confirm("정말 삭제하시겠습니까?");
-      if(result)
-      {
-        $.ajax({
-  			  url:"/project/delete/"+id,
-  			  type:"get",
-  			  dataType:"json",
-  			  success: function(result){
-            console.log("project deleted");
-            location.href="../dashboard";
-  			  },
-  			  error:function(request,status,error){
-  		       console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
-  			  }
-  		  });
-      }
-    }
-
-    //
-    // function removeProj(id){
-    //   var result = confirm("정말 삭제하시겠습니까?");
-    //   if(result)
-    //   {
-    //     //
-    //   }
-    // }
-
-
      function addTask(pid, tname) {
        var result = confirm(tname+"을(를) 추가하시겠습니까?");
        if(result){
@@ -110,7 +81,7 @@
 
               <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button>
             </form>
-            <a href="/project/delete/<%=project._id%>" onclick="return confirm('정말 삭제하시겠습니까?');"> 프로젝트 삭제 </a>
+            <a href="/project/delete/<%=project._id%>" onclick="return confirm('프로젝트를 정말 삭제하시겠습니까?');"> 프로젝트 삭제 </a>
             <!-- <button type='button' id="<%=project._id %>" class="btn" style="display:inline;" onclick="/"> 프로젝트 삭제 </button> -->
 
 
