fs read filename added

--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -68,7 +68,7 @@
                     <p> 등록된 산출물 </p>
                     <ul style="text-align:left;">
                       <% for (var j=0; j<project.task[i].product.length; j++) { %>
-                      <li> <a href="/project/download/<%=project._id%>/<%=project.task[i]._id%>/<%=j%>" > <%= project.task[i].product[j] %> </a> </li>
+                      <li> <a href="/project/download/<%=project._id%>/<%=project.task[i]._id%>/<%=project.task[i].product[j]%>" > <%= project.task[i].product[j] %> </a> </li>
                       <% } %>
                     </ul>
                     <a href="/project/done/<%=project._id%>/<%=project.task[i]._id%>"> Confirm! </a>
