--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -103,7 +103,7 @@
 
                   <!--input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br-->
                 </div><!-- /input-group -->
-                <a href="/project/<%=project._id%>"> 내 프로젝트로 이동 </a> <a href="/project/dashboard"> 대시보드로 이동 </a>
+                <a href="/project/<%=project._id%>"> 내 프로젝트로 이동 </a> &nbsp;&nbsp; <a href="/project/dashboard"> 대시보드로 이동 </a>
 
 
           </div>
