--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -92,7 +92,7 @@
                   <% optiontasks=["3.작업요청","5.IP할당","9.시설현황"]; for(var i=0; i<project.task.length; i++) { %>
 
                    <li>
-                     <!-- <% project.task.sort(); %> -->
+                     <% project.task.sort(); %>
                      <a href=""> <%= project.task[i].tname.substr(2) %> </a> <% for(var j=0; j<3; j++) { if(optiontasks[j] == project.task[i].tname) { %> <button name="<%=project._id %>" id="<%=project.task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button>  <% optiontasks.splice(j, 1); }}%>
                    </li>
                    <!-- if문으로 active 경우 처리해줄것 -->
