--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -43,7 +43,7 @@
                   <td> <%= myprojects[i].pdesc %> </td>
                   <td> <% myprojects[i].task.sort(); for(var j=0; j<myprojects[i].task.length; j++) { if(myprojects[i].task[j].state ==="inprogress"){ %>
                     <%= myprojects[i].task[j].tname.substr(2) %>
-                  <% }} %> 진행중 </td> <!-- 진행상황 쓸예정 -->
+                  <% }} %> </td> <!-- 진행상황 쓸예정 -->
                   <td> <a href = "update/<%= myprojects[i]._id %>"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
 
                 </tr>
