--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -83,7 +83,7 @@
                     </ul>
                     <a href="/project/done/<%=project._id%>/<%=project.task[i]._id%>"> Confirm! </a>
                   <% } else { %>
-                    <% if(i>0 && curr<i) {
+                    <% if(i>0 && curr<i) { %>
                       앞 단계를 진행한 후 열어주세요.
                     <% } else {} %>
                   <% } %>
