--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -84,7 +84,7 @@
                     <a href="/project/done/<%=project._id%>/<%=project.task[i]._id%>"> Confirm! </a>
                   <% } else { %>
                     <% if(i>0 && curr<i) { %>
-                      앞 단계를 진행한 후 열어주세요.
+                      <p stype="color:red;"> 앞 단계를 진행한 후 열어주세요.</p>
                     <% } else {} %>
                   <% } %>
 
